--- a/esp32_template/CMakeLists.txt
+++ b/esp32_template/CMakeLists.txt
@@ -3,4 +3,4 @@
 cmake_minimum_required(VERSION 3.5)
 
 include($ENV{IDF_PATH}/tools/cmake/project.cmake)
-project(esp32_template)
+project(IOT_ALW_PROJECT)
