--- a/esp32_template/main/CMakeLists.txt
+++ b/esp32_template/main/CMakeLists.txt
@@ -1,3 +1,3 @@
 # Edit following two lines to set component requirements (see docs)
-idf_component_register(SRCS main.c rgb_led.c
+idf_component_register(SRCS main.c rgb_led.c wifi_app.c
 						INCLUDE_DIRS ".")					
