--- a/esp32_template/main/CMakeLists.txt
+++ b/esp32_template/main/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Edit following two lines to set component requirements (see docs)
-idf_component_register(SRCS main.c rgb_led.c wifi_app.c http_server.c lib_dht22/dht22.c
+idf_component_register(SRCS main.c rgb_led.c wifi_app.c http_server.c dht22.c
 						INCLUDE_DIRS "."
 						EMBED_FILES webpage/app.css webpage/app.js webpage/favicon.ico webpage/index.html webpage/jquery-3.3.1.min.js)					
